objects/AddOn_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Add On</label>
        <referenceTo>cspmb__Add_On_Price_Item__c</referenceTo>
        <relationshipLabel>AddOn Dependencies</relationshipLabel>
        <relationshipName>AddOn_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_On_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Add On</label>
        <referenceTo>cspmb__Add_On_Price_Item__c</referenceTo>
        <relationshipLabel>AddOn Dependencies (Target Add On)</relationshipLabel>
        <relationshipName>AddOn_Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSCRM_Migration_Id__c</fullName>
        <description>Used as an external id for migrating the data from org to an org (easing up the deployments).</description>
        <externalId>true</externalId>
        <inlineHelpText>Used as an external id for migrating the data from org to an org (easing up the deployments).</inlineHelpText>
        <label>CSCRM Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Source__c</fullName>
        <label>Source Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Target__c</fullName>
        <label>Target Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Order</fullName>
                </value>
                <value>
                    <fullName>MACD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Product</label>
        <referenceTo>cspmb__Price_Item__c</referenceTo>
        <relationshipLabel>AddOn Dependencies</relationshipLabel>
        <relationshipName>AddOn_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusion</fullName>
                </value>
                <value>
                    <fullName>Exclusion</fullName>
                </value>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Commercial_Product_Contract_Term__c</fullName>
        <formula>TEXT(Price_Item__r.cspmb__Contract_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Product Contract Term</label>
        <type>Text</type>
    </fields>
    <label>AddOn Dependency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price_Item__c</columns>
        <columns>Add_On_Source__c</columns>
        <columns>Group_Target__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Source__c</columns>
        <columns>Add_On_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AddOn Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AddOn Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>